--- a/activites/activites.css
+++ b/activites/activites.css
@@ -1,73 +1,64 @@
 /* استيراد الخطوط من Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Marhey:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Marhey:wght@300;400;500;600;700&display=swap");
 
 /* إعدادات عامة */
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Tajawal", sans-serif;
-    direction: rtl;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Tajawal", sans-serif;
+  direction: rtl;
 }
 
 ::selection {
-    background-color: #926747;
-    color: #bcac9e;
+  background-color: #926747;
+  color: #bcac9e;
 }
 
 header {
-    background-color:#926747;
-    color:#000;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    padding: 15px 20px;
+  background-color: #926747;
+  color: #000;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding: 15px 20px;
 }
 
 header h1 {
-    font-weight: 900;
+  font-weight: 900;
 }
 
 .titleCard {
-    font-weight: 800;
-    border: 1px solid;
-    padding: 20px;
-    border-radius: 20px;
+  font-weight: 800;
+  border: 1px solid;
+  padding: 20px;
+  border-radius: 20px;
 }
 
 .card.layoutCard {
-
-    background-color:beige;
-    transition: .3s ease-in-out;
+  background-color: beige;
+  transition: 0.3s ease-in-out;
 }
 
-
 .card.layoutCard a {
-    transition: .3s;
+  transition: 0.3s;
 }
 
 .card.layoutCard a:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .card-text {
-    height: 120px;
+  height: 120px;
 }
 
-
-
-
 .row {
-    padding: 15px;
-    overflow: hidden;
-    ;
+  padding: 15px;
+  overflow: hidden;
 }
 
 h3 {
-    
-    color:#fff;
-    font-weight: 800;
-    text-align: center;
-   
+  color: #fff;
+  font-weight: 800;
+  text-align: center;
 }
-
