--- a/final test/test.css
+++ b/final test/test.css
@@ -1,49 +1,42 @@
-
-/* استيراد الخطوط من Google Fonts */@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
+/* استيراد الخطوط من Google Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap");
 
 /* إعدادات عامة */
 * {
-    /*padding: 0;
+  /*padding: 0;
     margin: 0;*/
-    box-sizing: border-box;
-    font-family: "Tajawal", sans-serif;
-    direction: rtl;
+  box-sizing: border-box;
+  font-family: "Tajawal", sans-serif;
+  direction: rtl;
 }
 
 ::selection {
-    background-color: #926747;
-    color: #bcac9e;
+  background-color: #926747;
+  color: #bcac9e;
 }
 
 header {
-    background-color:#926747;
-    color:black;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    padding: 10px 10px;
+  background-color: #926747;
+  color: black;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding: 10px 10px;
 }
 
-
-
-
-
-
 header h1 {
-    font-weight: 900;
-    color: beige;
+  font-weight: 900;
+  color: beige;
 }
 
 h2 {
-    font-weight: 900;
-color:beige;
-text-align: right;
-justify-content: right;
+  font-weight: 900;
+  color: beige;
+  text-align: right;
+  justify-content: right;
 }
 
-
-
-body{
-    
-    min-height: 100vh;
-    background: url(/images/backbro.jpg) no-repeat; }
+body {
+  min-height: 100vh;
+  background: url(/Science/images/backbro.jpg) no-repeat;
+}
